Fix issue with verse tracker not showing when slider moving.

--- a/app/components/Verse/VerseTracker/VerseTracker.scss
+++ b/app/components/Verse/VerseTracker/VerseTracker.scss
@@ -2,9 +2,8 @@
     background-color: rgba(200, 150, 250, 0.4);
 
     .RM__isPaused
-    &,
-    .RM__sliderMoving
     & {
+        // Override transition in inline style.
         transition: none !important;
     }
 }
